--- a/Chemical Kinetics.ipynb
+++ b/Chemical Kinetics.ipynb
@@ -1127,7 +1127,7 @@
     "\\begin{equation}\n",
     "A + Y \\rightarrow X \\quad k_{1} \n",
     "\\end{equation}\n",
-    "\\begin{equation\n",
+    "\\begin{equation}\n",
     "X + Y \\rightarrow P \\quad k_{2} \n",
     "\\end{equation}\n",
     "\\begin{equation}\n",
